# Graph-Colouring

./: Guide.md  README.md  front_end.md  package-lock.json  package.json  webpack.config.js
server/: Cargo.toml
server/src/: graph.rs  main.rs
src/: index.js
static/: index.html  index.js  styles.css
