[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
petgraph = "0.6.4"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
unordered-pair = "0.2.4"
